--- a/home/Tpl/Index/index.html
+++ b/home/Tpl/Index/index.html
@@ -672,7 +672,33 @@
 		indicators: false,
 		buttons: true
 	});
+	
+	
 	$(".thewenti").on("click", function() {
-		
+		window.location.href="__APP__/Index/index";
+	});
+	var tzhu = $(".yezhukaoyou ul li");
+	$(".yezhukaoyou ul li").on("click", function() {
+		var index = $(this).index();
+		for(var i=0;i<tzhu.length;i++){
+			if(index == 0){
+				window.location.href="__APP__/Index/index";
+			}
+			if(index == 1){
+				window.location.href="__APP__/Index/aboutus";
+			}
+			if(index == 2){
+				window.location.href="__APP__/Contactus/newcenter";
+			}
+			if(index == 3){
+				window.location.href="__APP__/Contactus/customercase";
+			}
+			if(index == 4){
+				window.location.href="__APP__/Contactus/servicetech";
+			}
+			if(index == 5){
+				window.location.href="__APP__/Contactus/index";
+			}
+		}
 	});
 </script>
